assets/css/app.css
/*
    Tuttarealstep.github.io
    Custom Style
*/

@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,700");
@import url("https://fonts.googleapis.com/css?family=Roboto");

/* Basic */

html, body
{
    height: 100%;
}

html {
    overflow-x: hidden;
}

body {
    -webkit-backface-visibility: hidden;
    font-family: "Open Sans", sans-serif;
    font-weight: 400;
    color: #FFC857;
    -webkit-font-smoothing: antialiased;
    background: linear-gradient(#1F2041, #4B3F72);
    /*background-color: #3F51B5; /* ffffff */
    /*background: url(../images/bg_photo.jpg) !important; */
    background-repeat: no-repeat !important;
    background-attachment: fixed !important;
    background-position: top center !important;
    background-size: cover !important;
    background-position-x: 100px;
    font-size: 1.5em;
    padding: 0;
}

/* Utils */

.big_title {
    font-family: "Open Sans", sans-serif;
    font-weight: 500;
}

/* Navbar */

.navbar {
    position: fixed;
}
.navbar-new {
    background: #000000;
    border-color: #757575 !important;
    border-bottom: 1px solid #757575 !important;
    border: 0;
    border-radius: 0;
    font-family: "Roboto", sans-serif;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    font-size: 13px;
    z-index: 1000;
}
.navbar-new .navbar-brand {
    font-family: "Open Sans", sans-serif;
    letter-spacing: 0.1em;
    font-weight: 400;
    font-size: 28px;
    color: #FFC857;
}

/* Logo */

.rotate {
    -webkit-transform: rotate(180deg);
    -moz-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    -o-transform: rotate(180deg);
    transform: rotate(180deg);
    position: absolute;
    margin-top: 2px;
}
.navbar-new .nav li > a {
    position: relative;
    color: #FFC857;
}
.navbar-new .nav > li > a:focus, .navbar-new .nav > li > a:hover {
    background: none;
    color: #119DA4;
}
.navbar-new .navbar-toggle .icon-bar {
    background: #FFC857;
}

/* Transition */

a, a:focus, a:active {
    -webkit-transition: color .4s ease;
    -moz-transition: color .4s ease;
    -o-transition: color .4s ease;
    -ms-transition: color .4s ease;
    transition: color .4s ease;
}
.navbar-new, .navbar-custom .navbar-brand {
    -webkit-transition: all 0.4s ease-in-out 0s;
    -moz-transition: all 0.4s ease-in-out 0s;
    -ms-transition: all 0.4s ease-in-out 0s;
    -o-transition: all 0.4s ease-in-out 0s;
    transition: all 0.4s ease-in-out 0s;
}
.navbar-toggle .icon-bar {
    transition: all 0.25s;
}
.navbar-toggle .icon-one {
    transform: rotate(45deg);
    transform-origin: 10% 10%;
}
.navbar-toggle.collapsed .icon-one {
    transform: rotate(0);
}
.navbar-toggle .icon-two {
    opacity: 0;
}
.navbar-toggle.collapsed .icon-two {
    opacity: 1;
}
.navbar-toggle .icon-three {
    transform: rotate(-45deg);
    transform-origin: 10% 90%;
}
.navbar-toggle.collapsed .icon-three {
    transform: rotate(0);
}

/* About */
.about-container {
  text-align: center;
}

.about_info {
    font-weight: 400;
    font-style: italic;
    color: #FFC857; /* 777777 */
}

/* Footer */

footer {
    font-size: 28px;
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 38px;
}

.footer_copyright {
    position: fixed;
    margin-top: 8px;
    font-size: 12px;
    font-family: "Roboto", sans-serif;
    text-transform: uppercase;
    letter-spacing: 0.1em;
}

.fa {
  color: #000;
}

hr {
  width: 50%;
}

.skills-container {
    margin-bottom: 20px;
}

section
{
    height: 100%;
    padding-top: 80px;
}

/* Media */

@media (min-width: 768px) {
    .navbar-transparent {
        background: transparent;
        border: 0 !important;
        border-color: #757575 !important;
        padding-bottom: 15px;
        padding-top: 15px;
    }
    .navbar-transparent .nav li > a, .navbar-transparent .navbar-brand {
        color: #ffffff; /* 000000 */
    }
    .nabar-dark .nav > li > a, .nabar-dark .navbar-brand {
        color: #ffffff;
    }
    .big_title {
      font-size: 3vw;
    }

    .about-text, .contact-text
    {
        text-align: center;
    }

    .home-container
    {
        margin-top: 80px;
    }
}
@media (max-width: 767px) {
    /* Navbar */
    .navbar-new .navbar-nav {
        margin-top: 0;
        margin-bottom: 0;
    }
    .navbar-new li a:hover {
        background: #1a1919 !important;
    }
    .navbar-new li a {
        border-bottom: 1px solid #757575 !important;
    }
    .navbar-new .navbar-collapse {
        border-top: 1px solid #757575;
        -webkit-box-shadow: none;
        box-shadow: none;
    }

    .about-text, .contact-text
    {
    text-align: center;
    }

    section
    {
        margin-bottom: 180px;
    }
}

.list-group {
	color: #000000;
}

.list-group.transparent > .list-group-item
{
    background-color: transparent;
    border: 1px solid transparent;
}
.skills-list > .list-group-item, .skills-list > .list-group-item > .fa
{
    color: #119DA4;
    padding: 0;
    margin-top: 12px;
}

.skills-list > .list-group-item > .fa
{
    display: inline-block;
    vertical-align: middle;
    margin-right: 10px;
    margin-top: 4px;
    width: 35px;
    height: 35px;
}

.icon-big
{
    font-size: 2.5em;
}

.contact_me_button
{
    border-radius: 5px;
    border: 2px solid #FFC857;
    color: #FFC857;
    background-color: transparent;
}

.contact_me_button:hover
{
    color: #ffffff;
}

.form-control
{
    border-radius: 5px;
    border: 2px solid #FFC857;
    color: #FFC857;
    height: 40px;
    background-color: transparent;
}

textarea.form-control
{
    min-height: 100px;
    max-height: 600px;
}

.FFC857
{
    color: #FFC857;
}

.skills-ul
{
    list-style-type: none;
    margin: 0;
    padding: 0;
    text-align: center;
}

.skills-cricle
{
    display: inline-block;
    width: 100px;
    height: 100px;
    border-radius: 50%;
    border: 2px solid #FFC857;
    line-height: 100px;
    text-align: center;
    margin-right: 4%;
    margin-bottom: 4%;
    -webkit-transition:  border 3s ease;
    -moz-transition:  border 3s ease;
    -o-transition:  border 3s ease;
    -ms-transition: border 3s ease;
    transition: border 3s ease;
}

.skills-cricle:hover
{
    border: 2px dashed #FFC857;
}

